--- a/nigeria.html
+++ b/nigeria.html
@@ -2,10 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Adminto - Responsive Admin Dashboard Template</title>
+        <title>Covid-19 Update</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta content="A fully featured admin theme which can be used to build CRM, CMS, etc." name="description" />
-        <meta content="Coderthemes" name="author" />
+        <meta content="A website for keeping track of the latest statistics for the COVID19 Coronavirus" name="description" />
+        <meta content="Ayinde Samuel" name="author" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <!-- App favicon -->
         <link rel="shortcut icon" href="dist/assets/images/favicon.ico">
