--- a/nigeria.html
+++ b/nigeria.html
@@ -77,7 +77,10 @@
                                 <a href="index.html"><i class="mdi mdi-view-dashboard"></i>Dashboard</a>
                             </li>
                             <li>
-                                <a href="#"><i class="mdi mdi-flag-variant"></i>Nigeria</a>
+                                <a href="nigeria.html"><i class="mdi mdi-flag-variant"></i>Nigeria</a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="mdi"></i>News(Coming Soon)</a>
                             </li>
 
                         </ul>
@@ -225,8 +228,8 @@
                     </div>
                     <div class="col-md-6">
                       <div class="text-md-right footer-links d-none d-sm-block">
-                          <a href="https://www.linkedin.com/in/ayindesamuelayomide">About Me</a>
-                          <a href="https://ayindesamuel.com.ng/contact-me/">Contact Me</a>
+                          <a href="https://www.linkedin.com/in/ayindesamuelayomide" target="_blank">About Me</a>
+                          <a href="https://ayindesamuel.com.ng/contact-me/" target="_blank">Contact Me</a>
                       </div>
                     </div>
                 </div>
