Covid-19 News (Nigeria) section added

--- a/nigeria.html
+++ b/nigeria.html
@@ -80,7 +80,7 @@
                                 <a href="nigeria.html"><i class="mdi mdi-flag-variant"></i>Nigeria</a>
                             </li>
                             <li>
-                                <a href="#"><i class="mdi"></i>News(Coming Soon)</a>
+                                <a href="news.html"><i class="mdi"></i>News</a>
                             </li>
 
                         </ul>
