Button added to search input

--- a/index.html
+++ b/index.html
@@ -112,9 +112,10 @@
                     <div class="p-2">
                         <form class="form-horizontal" role="form">
                             <div class="form-group row">
-                                <div class="col-sm">
-                                    <input type="text" class="form-control" placeholder="Search Country... then press enter" id="search">
+                                <div class="col">
+                                    <input type="text" class="form-control" placeholder="Search Country..." id="search">
                                 </div>
+                                <button type="submit" class="btn btn-primary" id="btnSearch">Search</button>
                             </div>
                         </form>
                     </div>
